# lijoa-backend-main

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 102ee8be841f_api_keys_table.py  145aef51d46f_api_keys_table.py  2f724724c077_api_keys_table.py  510be6b881c9_api_keys_table.py  658d105f226f_api_keys_table.py  7c777cdcbffc_api_keys_table.py  9baf263d133c_create_users_and_applications.py  da7455813890_create_users_and_applications.py  dc959aa96b1b_api_keys_table.py
app/: auth.py  config.py  crud.py  db.py  deps.py  main.py  models.py  models_apikeys.py  schemas.py  smoke.py
app/routes/: api_keys.py  applications.py  users.py
tests/: test_api.py  test_auth_and_limits.py  test_healthz.py  test_models.py
